# gha-insights

./: Cargo.toml  README.md  deny.toml
examples/: jobs.rs  server.rs
src/: cli.rs  defs.rs  error.rs  lib.rs
src/server/: db.rs  mod.rs  routes.rs
