[package]
name = "ci-insights"
version = "0.2.0"
edition = "2021"
authors = ["Aleks Pickle <aleks.work2222@gmail.com>"]
description="""
GitHub Actions explorer crate.
"""

[features]
default = []
server = ["rocket"]  # server with DB

[dependencies]
envy = "0.4.2"
octocrab = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["secrets"], optional = true }
structopt = { version = "0.3", features = ["wrap_help"] }
tokio = { version = "1.6.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
thiserror = "1.0"
jsonwebtoken = "7"
futures = "0.3.8"
url = "2.2.2"
